# Consulting

./: .gitignore  CMakeLists.txt  requirements.txt
public/: admin.html  details.html  index.html  login.html  orders.html  profile.html  register.html  support.html
public/css/: style.css
public/js/: app.js
src/: main.cpp
src/controllers/: WebController.cpp  WebController.hpp
src/db/: Database.cpp  Database.hpp
src/exceptions/: ConsultingException.hpp
src/models/: Admin.hpp  Client.hpp  OrderRequest.hpp  Request.hpp  SupportRequest.hpp  User.hpp
src/utils/: ConstexprUtils.hpp
tests/: TestDatabase.cpp  TestUser.cpp  TestVariant.cpp
